--- a/dummy.html
+++ b/dummy.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>This is a html page </h1>
+<body> 
+    <ul>                      
+    <li>  bread </li>
+    <li>  butter</li>
+    </ul>
+ <h1>This is a html page </h1>
+    <h2>heading</h2>
 </body>
 </html>
