--- a/PORTFOLIO.html
+++ b/PORTFOLIO.html
@@ -13,9 +13,9 @@
   <img src="my image.jpg" alt="My Picture" height="250" width="250" >
   <h2> EDUCATION </h2> 
   <ul> 
-  <li> <b> 10th Class </b></li>
-  <li> <b>  12th Class </b> </li>
-  <li> <b>  Bachelor in computer applicstion (BCA) </b></li>
+  <li> <b> 10th Class (SEE) : 2.80 GPA  </b></li>
+  <li> <b>  12th Class (SLC) : 3.20 GPA </b> </li>
+  <li> <b>  Bachelor in computer application (BCA) (IN PROCESS) </b></li>
  </ul>
  <h2> SKILLS</h2>
  <ul> 
@@ -33,9 +33,9 @@
  <h2>CONTACT</h2>
  <ul>
 <li>Phone number : <U> 8953115775 </U></li>
-<LI>Linked in : Dipesh Kharel</LI>
-<LI>Instagram : Dipesh Kharel</LI>
-<LI>Facebook : Dipesh Kharel </LI>
+<LI>  <a href="https://www.linkedin.com/in/dipesh-kharel-82b084322/?originalSubdomain=in">  Linked in </a>  </LI>
+<LI> <a href= https://www.instagram.com/ig_crazeeeeooo/ >  Instagram  </a> </LI>
+<LI>  <a href= https://www.facebook.com/dipesh.kharel.9693 >  Facebook   </a> </LI>
 
 
  </ul>
