--- a/PORTFOLIO.html
+++ b/PORTFOLIO.html
@@ -8,21 +8,25 @@
 <body> 
 <center> <h2> PORTFOLIO</h2>
   </center>
+  <hr>
   <h1> DIPESH KHAREL</h1>
   <p> I'm a Student </p>
   <img src="my image.jpg" alt="My Picture" height="250" width="250" >
+  <hr>
   <h2> EDUCATION </h2> 
   <ul> 
   <li> <b> 10th Class (SEE) : 2.80 GPA  </b></li>
   <li> <b>  12th Class (SLC) : 3.20 GPA </b> </li>
   <li> <b>  Bachelor in computer application (BCA) (IN PROCESS) </b></li>
  </ul>
+ <hr>
  <h2> SKILLS</h2>
  <ul> 
   <li> <i>  Communication skill </i> </li>  
   <li> <i> Learning Html </i> </li>  
   <li> <I> Learning new things </I> </li> 
  </ul>
+ <hr>
  <h2> HOBBIES</h2>
  <ul> 
 <LI>Singing </LI>
@@ -30,12 +34,14 @@
 <LI>Adventure</LI>
 <LI>Travelling</LI>
  </ul>
+ <hr>
  <h2>CONTACT</h2>
  <ul>
 <li>Phone number : <U> 8953115775 </U></li>
 <LI>  <a href="https://www.linkedin.com/in/dipesh-kharel-82b084322/?originalSubdomain=in">  Linked in </a>  </LI>
 <LI> <a href= https://www.instagram.com/ig_crazeeeeooo/ >  Instagram  </a> </LI>
 <LI>  <a href= https://www.facebook.com/dipesh.kharel.9693 >  Facebook   </a> </LI>
+<p>   &hearts;   &smile; &hearts;  </p>
 
 
  </ul>
