--- a/PORTFOLIO.html
+++ b/PORTFOLIO.html
@@ -40,6 +40,17 @@
  <LI>Travelling</LI>
  </ul></section>
  <hr>
+ <section>
+ <h2>ACHIEVEMENTS</h2>
+  <ul>
+    <li>Volleyball : State level winner</li>
+    <li>Hackathon   : Second winner  </li>
+    
+
+
+  </ul>
+</section>
+<hr>
    <footer>
  <h2>CONTACT</h2>
  <ul>
@@ -47,9 +58,12 @@
 <LI>  <a href="https://www.linkedin.com/in/dipesh-kharel-82b084322/?originalSubdomain=in">  Linked in </a>  </LI>
 <LI> <a href= https://www.instagram.com/ig_crazeeeeooo/ >  Instagram  </a> </LI>
 <LI>  <a href= https://www.facebook.com/dipesh.kharel.9693 >  Facebook   </a> </LI> 
-<p>   &hearts;   &smile; &hearts;  </p>
+
 </footer>
 
  </ul>
+   <p>&COPY;
+  All Rights Reserved &trade;</p>
+ <p>   &hearts;   &smile; &hearts;  </p>
 </body>
 </html>
