--- a/HTML LVL 2.html
+++ b/HTML LVL 2.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INLINE VS BLOCK </title>
+    <title>Super script subscript </title>
 </head>
 <body>
-    <h1> a<sup>2</sup>            </h1>
-    <h1>   h<sub>2</sub>o        </h1>
+   <h1> Today is the 9<sup>th</sup>of october and 2<sup>4</sup>16 always</h1>
    
    
 </body>
