--- a/FORMS.html
+++ b/FORMS.html
@@ -7,7 +7,7 @@
     <title>FORMS</title>
 </head>
 <body>
-    <form action="/action">
+    <form action="/server">
        <div>
             <label for="username">Username :</label>  
             <input  type="text" placeholder="enter username" id="username" />
@@ -16,10 +16,14 @@
             <label for="password">Password :</label>
             <input  type="password" placeholder="enter password" id="password"  />
         </div>
-        <div>
-            <label for="age">Age :</label>
-            <input type="number" placeholder="enter age" id="age"/>
-        </div>
+        </form>
+        <hr>
+        <form action="https://www.youtube.com/results">
+            <input type="text" placeholder="search in youtube" name="search_query" >
+            <button> Search </button>
+           
+
+
         </form>
 </body>
 </html>
