--- a/TAGS .html
+++ b/TAGS .html
@@ -12,8 +12,9 @@
 <p>   
  <b> TWINKLE TWINKLE </b> <br> <i> LITTLE STAR </i> <br> <u> HOW I WONDER </u> <BR> WHAT YOU ARE
 </p>
-
-
+<p>This is normal text.</p>
+<p><big>This text is bigger.</big></p>
+    
 
 
 </body>
