--- a/CSS/index.html
+++ b/CSS/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS LEVEL 1</title>
+    <title>CSS CHAPTER 1</title>
 </head>
 <body>
-    <h1 style="color: red;">Hello World</h1>
+    <h1 style="color: red;">Hello World!</h1>
+    <p style="color: purple;" >This is a paragraph.</p>
+    <button style="color: gold; background-color: black ; "  >Submit</button>
     
 </body>
 </html>
