--- a/CSS/index.html
+++ b/CSS/index.html
@@ -9,6 +9,9 @@
     <h1 style="color: red;">Hello World!</h1>
     <p style="color: purple;" >This is a paragraph.</p>
     <button style="color: gold; background-color: black ; "  >Submit</button>
+    <h1 style="color: red;">Hello World!</h1>
+    <p style="color: purple;" >This is a paragraph.</p>
+    <button style="color: gold; background-color: black ; "  >Submit</button>
     
 </body>
 </html>
