--- a/CSS/index.html
+++ b/CSS/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS CHAPTER 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!----Inline style----->
+    <!---
     <h1 style="color: red;">Hello World!</h1>
     <p style="color: purple;" >This is a paragraph.</p>
-    <button style="color: gold; background-color: black ; "  >Submit</button>
-    <h1 style="color: red;">Hello World!</h1>
-    <p style="color: purple;" >This is a paragraph.</p>
-    <button style="color: gold; background-color: black ; "  >Submit</button>
+    <button style="color: gold; background-color: black ; ">Submit</button> ---->
+    <h1> Hello World!</h1>
+    <h1> Dipesh Kharel</h1>
+    <h1> Project I</h1>
+    
     
 </body>
 </html>
