--- a/CSS/index.html
+++ b/CSS/index.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Hello there!</h2>
+    <h1>Spider Man</h1>
+    <hr>
+    <p>Spider-Man is a superhero in American comic books published by Marvel Comics. Created by writer-editor Stan Lee and artist Steve Ditko, he first appeared in the anthology comic book Amazing Fantasy #15 (August 1962) in the Silver Age of Comic Books. Considered one of the most popular and commercially successful superheroes, he has been featured in comic books, television shows, films, video games, novels, and plays.[9]</p>
+    <h2>Publication history</h2>
+    <hr>
+    <h3>Premiere</h3>
+    <p>In 1962, with the success of the Fantastic Four, Marvel Comics editor and head writer Stan Lee was looking for a new superhero idea. He said the teenage demand for comic books and a character with whom they could identify led to the creation fo Spider-Man.[16]: 1  As with Fantastic Four, Lee saw Spider-Man as an opportunity to "get out of his system" what he felt was missing in comic books.[17]</p>
+    <hr>
+    <h3>Solo Series</h3>
+    <p>Sally Kempton for the Village Voice opined in 1965 that "Spider-Man has a terrible identity problem, a marked inferiority complex, and a fear of women. He is antisocial, castration-ridden, racked with Oedipal guilt, and accident-prone ... [a] functioning neurotic".[141] Agonizing over his choices, always attempting to do right, he is nonetheless viewed with suspicion by the authorities, who seem unsure as to whether he is a helpful vigilante or a clever criminal.[177]</p>
+    <h3>Fictional character</h3>
+    <p>Peter Parker has superhuman spider-powers and abilities derived from mutations resulting from the bite of a radioactive spider.[178] Since the original Lee-Ditko stories, Spider-Man has had the ability to cling to walls. This has been speculated to be based on a distance-dependent interaction between his body and surfaces, known as the van der Waals force,[179] though in the 2002 Spider-Man film, his hands and feet are lined with tiny clinging cilia in the manner of a real spider's feet. Spider-Man's other powers include superhuman strength, speed, agility, and balance and a precognitive sixth sense referred to as his "spider-sense", which alerts him to danger.[178]</p>
+    
+
 
   
     
