--- a/CSS/practice qs css.html
+++ b/CSS/practice qs css.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <h2>Hi there!</h2>
-    <p>My name is Tom & I am there to help you.</p>
-    <button>Need Help</button>
+    <h1>NAMASTE DUNIYA</h1>
+   
 </body>
 </html>
