--- a/CSS/Quora.html
+++ b/CSS/Quora.html
@@ -75,7 +75,7 @@
     </main>
     <div id="myid">
     <p>
-        This Is the end of the website. vist the <a href="www.google.com">google</a>for more about us
+        This Is the end of the website. vist the <a href="https://www.google.com/?zx=1758089579566&no_sw_cr=1">google8</a>for more about us
      </p>
     </div>
   </body>
