--- a/CSS/Quora.html
+++ b/CSS/Quora.html
@@ -79,14 +79,18 @@
                 <button>answer</button>
             </span>
             <hr />
+        </div> 
+        <p>
+        This Is the end of the website. vist the <a href="https://www.google.com/?zx=1758089579566&no_sw_cr=1">google</a>for more about us
+         </p>
+         </main>
+        <div id="myid">
+        <p>
+        This is a paragraph where everything is return unknnowingly you can see im typing anything anyway randomly and yes im typing it randomly just in my way             yes  .
+        So now you are going to see a magic where the color of this line will be changing.
+        </p>
         </div>
-    </main>
-    <div id="myid">
-    <p>
-        This Is the end of the website. vist the <a href="https://www.google.com/?zx=1758089579566&no_sw_cr=1">google8</a>for more about us
-     </p>
-    </div>
-    <div>
+         <div>
         <input type="radio" id="Yes" name="agree">
         <label for="Yes">Yes</label>
         <input type="radio" id="No" name="agree">
