--- a/CSS/pracitceqs3.html
+++ b/CSS/pracitceqs3.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <h1>Facebook</h1>
-    <button class="userbtn">Login</button>
-    <button class="userbtn">Register</button>
+    <button id="login" class="userbtn">Login</button>
+    <button id="register" class="userbtn">Register</button>
     <hr />
     <label for="search">Search</label>
     <input placeholder="search your friends" id="search" />
